<resources>
    <string name="app_name">TravelInsurance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="btn_register_update">Update</string>
    <string name="title_welcome">Travel Insurance</string>
    <string name="offer_car_title">Car Insurance</string>
    <string name="offer_car_desc">Insurance up to 60% off</string>
    <string name="offer_bike_title">Motorcycle Insurance</string>
    <string name="offer_bike_desc">10% Hot Offer!</string>
    <string name="msg_username">Enter Username/Email Address</string>
    <string name="msg_password">Enter Password</string>
    <string name="msg_enable_fingerprint">Enable Fingerprint</string>

    <string name="msg_error_user_name">Please enter valid username</string>
    <string name="msg_error_password">Please enter valid password</string>
    <string name="msg_error_firstName">Please enter first name</string>
    <string name="msg_error_lastName">Please enter last name</string>
    <string name="msg_error_mobileNumber">Please enter mobile number</string>
    <string name="msg_error_email">Please enter email address</string>
    <string name="msg_error_valid_email">Please enter valid email address</string>
    <string name="msg_error_valid_mobileNumber">Please enter valid mobile number</string>
    <string name="msg_error_confirmPassword">Please enter confirm password</string>
    <string name="msg_error_passwordnotmatch">Password is not matching</string>
    <string name="msg_error_password_regex">At least 8 character with 1 digital, upper,lower &amp; special char </string>
    <string name="msg_error_invalid_username_password">Invalid username or password</string>
    <string name="msg_error_user_name_exist">User name is already exist</string>
    <string name="msg_error_email_name_exist">Email is already exist</string>
    <string name="empty"> </string>
    <string name="let_us_know_about_you">Let us know about you!</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="travel_insurance">Travel Insurance</string>
    <string name="home_hey_welcome">Hey %s,</string>
    <string name="home_how_we_can_help_you_today">How can we help you today?</string>
    <string name="home_i_m_leaving_another_policy">I\'m leaving another policy</string>
    <string name="home_better_rate">I\'m insured, but I want a better rate</string>
    <string name="title_vehicle_list">Vehicle List</string>
    <string name="search_hint">Search vehicle</string>
    <string name="menu_search">Search</string>
    <string name="title_let_us_know_about_your_vehicle">Vehicle Details</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="commercial">Commercial</string>
    <string name="v_select_year">Select Year</string>
    <string name="select_model">Select Model</string>
    <string name="select_make">Select Make</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="enter_zip_code">Enter zip code</string>
    <string name="enter_enginer_number">Enter Engine Number</string>
    <string name="select_owner_status">Select owner status</string>
    <string name="enter_usage_kilometers">Enter Usage Kilometers</string>
    <string name="enter_yearly_millage">Enter Yearly Millage</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="select_type">Select Type</string>

    <!-- Error message -->
    <string name="msg_error_selectType">Please select vehicle type</string>
    <string name="msg_error_selectMake">Please select vehicle make</string>
    <string name="msg_error_selectModel">Please select vehicle model</string>
    <string name="msg_error_selectyear">Please select year</string>
    <string name="msg_error_vehicle_number">Please enter vehicle number</string>
    <string name="msg_error_engine_number">Please enter engine number</string>
    <string name="msg_error_zip_code">Please enter zip code</string>
    <string name="msg_error_owner_status">Please select owner status</string>
    <string name="msg_error_kilo_meter">Please kilo kilometers</string>
    <string name="msg_error_yearly_millage">Please enter yearly millage</string>
    <string name="not_available">Not Available</string>
    <string name="title_premium_amount">Premium Amount</string>
    <string name="title_gst_18">GST @18%</string>
    <string name="title_you_will_pay">You\'ll Pay</string>
    <string name="btn_pay_securely">PAY SECURELY</string>
    <string name="btn_search_policy">Search Policy</string>
    <string name="loading">Loading...</string>
    <string name="empty_insurance">No insurance are available</string>
    <string name="server_error">Server Error! Please try again later.</string>
</resources>