<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registerModel"
            type="com.piappstudio.travelinsurance.register.RegistrationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="@dimen/m_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/h1"
            android:text="@string/let_us_know_about_you"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_20"
            style="@style/tiEitText"
            android:hint="@string/enter_first_name"
            app:errorText="@{registerModel.liveErrorUser.firstNameError}"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={registerModel.liveUser.firstName}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            style="@style/tiEitText"
            app:errorText="@{registerModel.liveErrorUser.lastNameError}"
            app:layout_constraintTop_toBottomOf="@id/tilFirstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={registerModel.liveUser.lastName}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tiEitText"
            android:hint="@string/enter_mobile_number"
            app:errorText="@{registerModel.liveErrorUser.mobileNumberError}"
            app:layout_constraintTop_toBottomOf="@id/tilLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={registerModel.liveUser.mobileNumber}"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tiEitText"
            android:hint="@string/enter_email_address"
            app:errorText="@{registerModel.liveErrorUser.emailError}"
            app:layout_constraintTop_toBottomOf="@id/tilMobileNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={registerModel.liveUser.email}"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tiEitText"
            android:hint="@string/enter_user_name"
            app:errorText="@{registerModel.liveErrorUser.userNameError}"
            app:layout_constraintTop_toBottomOf="@id/tilEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={registerModel.liveUser.userName}"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            style="@style/tiEitText"
            app:errorText="@{registerModel.liveErrorUser.passwordError}"
            app:layout_constraintTop_toBottomOf="@id/tilUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={registerModel.liveUser.password}"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tiEitText"
            android:hint="@string/enter_confirm_password"
            app:errorText="@{registerModel.liveErrorUser.confirmPasswordError}"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m_20"
            android:padding="10dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword"
            android:text="@string/btn_register"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>