<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.piappstudio.travelinsurance.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/travel_insurance"
                android:gravity="center"
                style="@style/h1"
                />
            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/m_80"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_insurance"
                app:tint="@color/colorSecondary"
                android:layout_marginTop="@dimen/f_20"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_username"
                style="@style/tiEitText"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/f_20"
                app:errorText="@{viewModel.errorUser}"
                app:layout_constraintTop_toBottomOf="@id/ivLogo">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.liveUser.userName}"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/tiEitText"
                android:hint="@string/msg_password"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:errorText="@{viewModel.errorPass}"
                app:layout_constraintTop_toBottomOf="@id/tilUserName">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text="@={viewModel.liveUser.password}"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/rbFingerPrint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/msg_enable_fingerprint"
                android:paddingStart="@dimen/m_10"
                android:paddingEnd="@dimen/m_10"
                android:checked="@={viewModel.isFingerPrintEnabled()}"
                app:layout_constraintTop_toBottomOf="@id/tilPassword" />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_20"
                android:gravity="center"
                android:text="@string/btn_sign_in"
                android:layout_marginBottom="@dimen/m_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rbFingerPrint" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>