<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.piappstudio.travelinsurance.model.mbo.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h1"
            android:layout_marginTop="@dimen/m_20"
            android:text="@{String.format(@string/home_hey_welcome, user.fullName)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/m_20"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            android:text="@string/home_how_we_can_help_you_today"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            android:layout_marginTop="@dimen/m_20" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewVehicle"
            style="@style/outlineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/m_20"
            android:layout_marginBottom="@dimen/m_30"
            android:padding="@dimen/m_20"
            android:text="Bought New Vehicle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintVertical_bias="0.3" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBetterRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/outlineButton"
            android:padding="@dimen/m_20"
            android:text="@string/home_better_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnNewVehicle"
            android:layout_marginBottom="@dimen/m_30"
            android:layout_marginEnd="@dimen/m_20"
            android:layout_marginTop="@dimen/m_10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInsured"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/m_20"
            style="@style/outlineButton"
            android:text="@string/home_i_m_leaving_another_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBetterRate"
            android:layout_marginBottom="@dimen/m_30"
            android:layout_marginEnd="@dimen/m_20"
            android:layout_marginTop="@dimen/m_10" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>